--- a/package/debian/changelog
+++ b/package/debian/changelog
@@ -1,4 +1,10 @@
-music-utilities (1.1) unstable; urgency=low
+music-utilities (1.2) stable; urgency=low
+
+  * Included substitution of the Eszett character.
+
+ -- George Boyle <george@thebuds.net>  Fri, 01 Aug 2014 00:30:24 +0100
+
+music-utilities (1.1) stable; urgency=low
 
   * Initial Release.
 
