--- a/README
+++ b/README
@@ -1,1 +1,16 @@
+# Music Utilities
 The finest utilities of music.
+
+To generate build files:
+$ autoreconf -i
+
+To build:
+$ ./configure
+$ make
+
+To create a source tarball distribution:
+$ make dist
+
+To create a package for distribution:
+$ make dist-arch        # for arch
+$ make dist-debian      # for debian
